[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"
license = "MIT"      # 添加这一行
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Qfish007 <506175003@qq.com>"]
[dependencies]
anyhow = "1.0.100"
dashmap = "6.1.0"
oneshot = "0.1.11"
rand = "0.8.5"
